# MaticovaKalkulackaProjekt

./: CMakeLists.txt  DeterminantMatice.cpp  MaticeHeader.h  MaticovaKalkulacka.cpp  MaticovaKalkulacka.h  NacteniZeSouboru.cpp  NasobeniMatic.cpp  NasobeniSkalarem.cpp  RozdilMatic.cpp  SoucetMatic.cpp  TransponovanaMatice.cpp  UlozeniDoSouboru.cpp  VypsaniMatice.cpp  VypsaniSouboru.cpp  VytvoreniMatice.cpp  data.txt
